<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorTitleBg"
    tools:context=".ui.activity.RegisterActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/al_toolBar"
        style="@style/CustomToolbarStyle"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorTitleBg"
        app:navigationIcon="@drawable/ic_chevron_left"
        app:title="@string/text_login"
        app:titleTextColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <camera.hj.cameracontroller.ui.view.DeleteEtView
            android:id="@+id/al_et_account"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_et_height"
            android:layout_marginEnd="@dimen/login_view_marginEnd"
            android:layout_marginStart="@dimen/login_view_marginStart"
            android:background="@drawable/et_login_bg"
            android:gravity="center_vertical"
            android:hint="@string/et_hint_account"
            android:imeOptions="actionNext"
            android:textColorHint="@color/colorWhite"
            android:maxLines="1"
            android:paddingEnd="@dimen/et_text_paddingStart"
            android:paddingStart="@dimen/et_text_paddingStart"
            android:singleLine="true"
            android:text=""
            android:textAllCaps="false" />


        <camera.hj.cameracontroller.ui.view.DeleteEtView
            android:id="@+id/al_et_pwd"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_et_height"
            android:layout_marginEnd="@dimen/login_view_marginEnd"
            android:layout_marginStart="@dimen/login_view_marginStart"
            android:layout_marginTop="@dimen/login_view_marginTop"
            android:background="@drawable/et_login_bg"
            android:textColorHint="@color/colorWhite"
            android:gravity="center_vertical"
            android:hint="@string/et_hint_pwd"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingEnd="@dimen/et_text_paddingStart"
            android:paddingStart="@dimen/et_text_paddingStart"
            android:singleLine="true"
            android:text=""
            android:textAllCaps="false" />

        <Button
            android:id="@+id/al_btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_et_height"
            android:layout_marginEnd="@dimen/login_view_marginEnd"
            android:layout_marginStart="@dimen/login_view_marginStart"
            android:layout_marginTop="@dimen/login_btn_marginTop"
            android:background="@drawable/btn_login_bg"
            android:text="@string/text_login"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack" />
    </LinearLayout>

</RelativeLayout>